# django-app-settings

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg
django-app-settings/: apps.py  settings.py
django_app_settings/: settings.py
