[metadata]
name = django-app-settings
version = 0.0.1
description = This package provides a smart settings that searches for application settings in project level settings with provided prefix.
long_description = file: README.rst
url = https://github.com/1mace1/django-app-settings
author = Nick Belyaev
author_email = belyaev.nikit@gmail.com
license = MIT License

[options]
include_package_data = true
packages = find:
